import "player.proto";

message LibpigaHandshake {
    optional string name = 1;
    
    repeated Player player = 2;
}